compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/withErrorTypes.fir.kt
interface T {
    val x: <!OTHER_ERROR, OTHER_ERROR!>ErrorType<!>
    fun getX(): <!OTHER_ERROR!>ErrorType1<!>
}